--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -314,6 +314,7 @@ button:hover {
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  overflow: hidden;
 }
 
 #learnMoreBtnWrap {
