--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -360,6 +360,12 @@ button:hover {
   z-index: 2;
 }
 
+#versionNum {
+  position: fixed;
+  right: 1%;
+  font-size: 14px;
+}
+
 /* For mobile only */
 @media screen and (max-width: 460px) {
   .nomobile {
