--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -86,6 +86,7 @@ button {
   padding: 5px;
   padding-left: 20px;
   padding-right: 20px;
+  padding-bottom: 9px;
   margin-top: 10px;
   cursor: pointer;
   transition: 175ms;
@@ -306,7 +307,7 @@ button:hover {
   max-height: 65%;
 }
 
-#logoSidebar{
+#logoSidebar {
   max-width: 40%;
   margin-bottom: 25px;
 }
@@ -450,7 +451,7 @@ button:hover {
     bottom: auto;
   }
 
-  #logoSidebar{
+  #logoSidebar {
     max-width: 20%;
   }
 }
